# POLY-classic

./: CMakeLists.txt  Dockerfile  README.md  poly-classic  poly-classic.sh
demo/: beso3d.poly  bump.poly  computer.poly  cornell.poly  demo.poly  demo2.poly  dragon.poly  duck.poly  fragment_shader.poly  klein.poly  poly-demo.poly  reflections.poly  transparency.poly
demo/models/: cone.ply  cube.ply  ibm5110.ply  klein.ply  poly.ply  quad.ply  quad2.ply  ray.ply  shelf.ply  sky.ply  sphere.ply  table.ply  tri.ply  wall.ply  water.ply  winwall.ply
include/: Camera.h  Fragment.h  Light.h  Material.h  POLY-classic.h  Poly.h  PolyRenderer.h  RGBA.h  Ray.h  Vec3.h  poly-classic.h
src/: Camera.cpp  Fragment.cpp  Light.cpp  Material.cpp  Poly.cpp  PolyRenderer.cpp  RGBA.cpp  Ray.cpp  Vec3.cpp  main.cpp  poly-classic.cpp
